fixed some spacing and screen size issues

--- a/css/responsive-site.css
+++ b/css/responsive-site.css
@@ -32,15 +32,19 @@ body {
 }
 
 #logo {
-  width: 3rem;
-  height: 3rem;
+  width: 45px;
+  height: 45px;
   border: none;
+}
+
+.nav-item {
+  font-size: 14px;
 }
 
 /* Header */
 
 .title {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-family: var(--anton);
   color: var(--dark-font-clr);
 }
@@ -54,16 +58,11 @@ body {
 
 /* Large Circles */
 
-.row {
+#circles {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  margin-top: 4.5rem;
-}
-
-#circles {
-  display: flex;
-}
+  margin-top: 4rem;}
 
 #circles div {
   display: flex;
@@ -102,7 +101,8 @@ body {
 
 #hr-1 {
   border: 1px solid #bbbcbd;
-  margin-top: 5em;
+  margin-top: 4em;
+  margin-bottom: 0;
 }
 
 /* below HR */
@@ -161,6 +161,7 @@ body {
   width: 5em;
   border: 0.125em solid var(--border-clr);
   margin-bottom: 1em;
+  margin-left: 5em;
 }
 
 .flex-grow-1 {
@@ -171,12 +172,12 @@ body {
   font-size: 1.5em;
   font-family: var(--anton);
   line-height: 1;
-  padding: 0 6em 0 0.5em;
+  padding: 0 .5em;
   margin-bottom: 0;
 }
 
 .paragraph {
-  width: 70%;
+  width: 100%;
   margin: 0 1em 0 0;
-  padding: 0;
-}
+  padding: 0 7em 0 0;
+  margin-left: 5em;}
